# spreadsheet-validator

./: .gitignore  CLAUDE.md  README.md  expenses.xlsx  prd_plan_a.json  progress-prd_plan_a.txt
sample_data/: expenses.xlsx
scripts/ralph/: ralph-prompt.md  ralph.sh
validator-agent/: .dockerignore  .env.example  Dockerfile  deploy.sh  pyproject.toml
validator-agent/app/: __init__.py  agent.py  api_models.py  callbacks.py  fix_utils.py  models.py  run_manager.py  server.py  services.py  utils.py
validator-agent/app/agents/: __init__.py  ingestion.py  processing.py  root_agent.py  validation.py
validator-agent/app/tools/: __init__.py  ingestion.py  processing.py  validation.py
validator-agent/docs/phases/: phase-01-scaffold-models.md  phase-02-tools.md  phase-03-agent-core.md  phase-04-backend-server.md  phase-05-frontend-webapp.md  phase-06-integration-quality.md
validator-agent/tests/: conftest.py  test_api_models.py  test_run_manager.py
validator-agent/tests/agents/: test_callbacks.py  test_root_agent.py  test_sub_agents.py
validator-agent/tests/e2e/: test_async_pipeline.py  test_full_pipeline.py  test_server.py
validator-agent/tests/fixtures/: test_data.csv
validator-agent/tests/foundation/: test_pipeline_state.py  test_scaffold.py  test_services.py
validator-agent/tests/tools/: test_fingerprint.py  test_fix_utils.py  test_ingestion.py  test_processing.py  test_validation.py
webapp/: README.md  package-lock.json  package.json
webapp/src/__tests__/: FixesTable.test.tsx  StateCanvas.test.tsx  cards.test.tsx  page.test.tsx  providers.test.tsx  (+5 more)
(+23 files in other folders)
